# OpenGL_tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/1.HelloTriangle/: 1.HelloTriangle.cpp  CMakeLists.txt
src/2.UniformVariables/: 2.UniformVariables.cpp  CMakeLists.txt
src/3.ColorMapping/: 3.ColorMapping.cpp  CMakeLists.txt
src/4.RotationAndTranslation/: 4.RotationAndTranslation.cpp  CMakeLists.txt
src/5.CodeCleanUp/: CMakeLists.txt  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp  readme.md
src/5.CodeCleanUp/Shaders/: shader.vert
src/6.WindowControl/: CMakeLists.txt  Camera.h  Shader.cpp  Shader.h  SyntheticViewGen.cpp  Window.cpp  Window.h  readme.md  shader.frag  shader.vert
src/7.TextureMapping/: CMakeLists.txt  Camera.cpp  Mesh.cpp  Texture.cpp  Texture.h  main.cpp  readme.md
src/7.TextureMapping/Shaders/: shader.frag  shader.vert
